--- a/Neri2.html
+++ b/Neri2.html
@@ -63,6 +63,11 @@ A Nèttore Neri sono attualmente intitolate la Biblioteca Comunale di Barbiano e
 
 <p><big>Si segnala che tre poesie del nostro personaggio sono state antologizzate, con traduzione (a piè di pagina) in italiano compiuta da Gianni Quondamatteo, in <strong><i>Poesia dialettale dal Rinascimento a oggi</i></strong>, 2 voll., introduzione, scelta dei testi, note e commenti di Giacinto Spagnoletti e Cesare Vivaldi, Milano, Garzanti, 1991, vol. I, pp. 611-613; la piccola sezione, dal titolo <i>Nettore Neri</i>, si apre a p. 611 con una breve (e non del tutto impeccabile) scheda su quest’autore.</big></p><br><br><br>
 
+<h5><big><big><big><big><strong><center>VERSI DI NERI SU VIGNOLA</center></strong></big></big></big></big></big></h5><br><br>
+<p><big>Neri dedicò la poesia <i>Oh Vgnola!... Oh Vgnola!</i> al paese d’adozione, scrivendola in dialetto romagnolo e inserendola nella sua raccolta di versi <i>Ruscàja</i> (Vignôla, Stamparèja A. Monti d’E. Fabbri, 1937, p. 153). Tradotto in vernacolo vignolese pochi anni dopo dall’Autore, il componimento fu poi musicato dal maestro Guglielmo Bussoli (1873-1953), nativo di Vignola. Del testo steso nel nostro dialetto esistono almeno due versioni non del tutto coincidenti: l’una, pubblicata da Francesco Gavioli nella sua opera <i>Vignola. Un popolo una chiesa una storia</i>, 2 voll., Vignola, Libreria “dei Contrari”, 1994, vol. I, pp. 41-42; l’altra, mandata alle stampe da Pierluigi Albertini nel suo libro <i>Dell’imperfetta poesia. Appunti di poesia popolare in riva a Panaro</i>, Combriccola di Brodano - Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”, Savignano sul Panaro (MO), Tipolitografia F.G., 2015, p. 66.<br>
+Qui sotto, riportiamo la stesura fatta uscire da Albertini, il quale riprende la redazione manoscritta di Luigi Masotti (risalente al 1947), tenore solista della Corale Vignolese, banda cittadina che nel secolo scorso non mancò di eseguirla in pubblico numerose volte con la summenzionata musica del maestro Bussoli; ci permettiamo di ritoccare in svariati punti la grafia delle parole in dialetto (pure all’interno del titolo). A seguire, ne offriamo una traduzione in italiano, riproducendo – con qualche piccola modifica – quella che affianca la versione in vernacolo presentata nel libro di Albertini.</big></p><br>
+
+<p><strong><big><i><a href="ohvignola.html">Oh, Vgnôla! Oh, Vgnôla!</a></i></big></strong></p><br><br><br>	
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 
@@ -96,7 +101,7 @@ Il volumetto contiene una raccolta di versi di Neri, una premessa di Aldo Spalli
 
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024, 2025 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
