--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -19,7 +19,6 @@
 <ul>
 <strong><li><a href="homepage.html">HOME</a></li>
 <li class="active"><a href="Chi siamo.html">CHI SIAMO?</a></li>
-<li><a href="Novità.html">NOVITÀ</a></li>
 <li><a href="Celebri Vignolesi.html">CELEBRI VIGNOLESI</a></li>
 <li><a href="Anniversari.html">ANNIVERSARI</a></li>
 <li><a href="Contatti.html">CONTATTI</a></li></strong>
@@ -51,31 +50,47 @@ La tradizione può dirsi realmente prolifica e vitale solo quando gli uomini del
 Bisogna considerare la tradizione quale atto comunitario di amore della vita e di inimicizia verso la morte: «trasmettere» è il contrario di «smettere», «dismettere», «tagliare»; la tradizione, dunque, è un’arma capace d’impedire che le esistenze individuali si sradichino da ogni contesto, ossia che l’ereditato legame organico tra l’uomo e le cose venga disarticolato. In altri termini, la tradizione dà lo scacco al sentimento d’abbandono e al deteriorarsi del senso d’appartenenza dell’essere umano in seno alla propria comunità.<br>
 Lungi dall’offrire paradisi in terra o felicità definitive, la tradizione costituisce un orientamento di vita, concorre a ordinare la scala delle priorità, è un senso innato da rielaborare continuamente nel rapporto con il mondo.</big></p><br><br><br>
 
-<p><strong><big><big>Le nostre <strong>COLLABORAZIONI</strong></big></big></strong></p><br>
+<p><strong><big><big>Le nostre collaborazioni e attività sul territorio (dalla più recente)</big></big></strong></p><br>
 
-<p><big><strong>Ottobre 2024</strong>: Camminata storico-artistica nel borgo di Vignola.</p></big>
+<p><big><strong>Ottobre 2024</strong>: Passeggiata storico-artistica nel borgo di Vignola.</p></big>
 
-<p><big>Nell’ambito della manifestazione Autunno a Vignola e in collaborazione con <i>La Banda della Trottola APS</i>, gli <i>Amici dell’Arte APS</i> e PRO LOCO Vignola.</p></big><br>
+<p><big>Nell’ambito della manifestazione <i>Autunno a Vignola</i> e in collaborazione con <i>La Banda della Trottola APS</i>, gli <i>Amici dell’Arte APS</i> e la <i>Pro Loco Vignola</i>.</p></big><br>
 
-<p><big><strong>Settembre 2024</strong>: Camminata al Santuario della Beata Vergine della Pieve.</p></big>
+<p><big><strong>Settembre 2024</strong>: Passeggiata storico-artistica dalla Casa Residenza per Anziani (CRA) di Vignola al Santuario della Beata Vergine della Pieve, con visita all’interno di quest’antico edificio sacro vignolese.</p></big>
 
-<p><big>In collaborazione con la Casa Residenza per Anziani (CRA) di Vignola e <i>La Banda della Trottola APS</i>, e nell’ambito delle iniziative messe in calendario dal Distretto di Vignola per la <i>Settimana dell’Alzheimer 2024</i>.</p></big><br>
+<p><big>In collaborazione con la CRA di Vignola e la <i>La Banda della Trottola APS</i>, e nell’ambito delle iniziative messe in calendario dal Distretto di Vignola per la <i>Settimana dell’Alzheimer 2024</i>.</p></big><br>
 
-<p><big><strong>Marzo 2024</strong>: Partecipazione alla realizzazione dell’Annuario della cinquantatreesima edizione della Festa dei Ciliegi in Fiore.</p></big>
+<p><big><strong>Marzo e aprile 2024</strong>: Collaborazione alla rivista mensile «Il Senso della Repubblica nel XXI secolo. Quaderni di Storia e Filosofia».<br><br>
 
-<p><big>All’interno del volume è contenuto anche l’articolo che Sara Scaglioni, editor di <i>Celebri Vignolesi</i>, ha dedicato alla Sezione Vignolese dell’AVIS Comunale di Vignola ODV, nel settantesimo anniversario della sua costituzione.</p></big><br>
+All’interno dei due numeri, sono contenute anche le altrettante parti di cui si compone l’articolo che Piero Venturelli ha dedicato alla figura e alle opere di Giuseppe Maria Soli.</big></p><br>
 
-<p><big><strong>Ottobre 2023</strong>: Passeggiate artistico-culturali a Vignola</p></big>
 
-<p><big>In collaborazione con gli <i>Amici dell’Arte APS</i> e con la collaborazione del Comune di Vignola e del Gruppo di documentazione vignolese <i>Mezaluna</i> - Mario Menabue.</p></big><br>
+<p><big><strong>Marzo 2024</strong>: Collaborazione alla realizzazione dell’Annuario della cinquantatreesima edizione della <i>Festa dei Ciliegi in Fiore</i>.<br><br>
 
-<p><big><strong>Maggio 2023</strong>: Passeggiate artistico-culturali nel cimitero di Vignola capoluogo.</p></big>
+All’interno del volume, è contenuto anche l’articolo che Sara Scaglioni, ha dedicato alla Sezione Vignolese dell’<i>AVIS Comunale di Vignola ODV</i>, nel settantesimo anniversario della sua costituzione.</big></p><br>
+
+<p><big><strong>Ottobre 2023</strong>: Passeggiate storico-artistiche nel borgo di Vignola e nel cimitero di Vignola Capoluogo.</p></big>
+
+<p><big>In collaborazione con gli <i>Amici dell’Arte APS</i>, il Comune di Vignola e del Gruppo di documentazione vignolese <i>Mezaluna</i> - Mario Menabue.</p></big><br>
+
+<p><big><strong>Settembre 2023</strong>: Collaborazione alla rivista mensile «Il Senso della Repubblica nel XXI secolo. Quaderni di Storia e Filosofia».<br><br>
+
+All’interno del numero, è contenuto anche l’articolo che Piero Venturelli ha dedicato alla figura e alle opere di Giacomo Barozzi, nonché alle Celebrazioni Barozziane, alla vigilia nel quattrocentocinquantesimo anniversario della morte del famoso personaggio.</big></p><br>
+
+
+<p><big><strong>Maggio 2023</strong>: Passeggiate storico-artistiche nel cimitero di Vignola capoluogo.</p></big>
 
 <p><big>In collaborazione con gli <i>Amici dell’Arte APS</i> e il Comune di Vignola.</big></p><br>
 
-<p><big><strong>VISITE GUIDATE PRESSO LO STUDIOLO DI L.A. MURATORI</strong>: <i>Celebri Vignolesi</i> si occupa inoltre di tenere aperto lo studiolo di Lodovico Antonio Muratori, sito presso la Casa Natale del grande letterato e, dal 1990, sede degli <i>Amici dell’Arte APS</i>, e di realizzare visite guidate durante l’inaugurazione delle varie esposizioni artistiche.</p></big>
 
-<p><big>In collaborazione con gli <i>Amici dell’Arte APS</i> e il Comune di Vignola.</p></big><br><br>
+<p><big><strong>Dicembre 2021</strong>: Collaborazione alla rivista annuale «Montesquieu.it».<br><br>
+
+All’interno del numero, è contenuto anche l’articolo che Piero Venturelli ha dedicato ad Agostino Paradisi <i>il Giovane</i> ammiratore di Dante.</big></p><br>
+
+
+<p><big><strong>Periodico accompagnamento dei visitatori allo Studiolo di Lodovico Antonio Muratori</strong>.<br><br>
+
+In collaborazione con gli <i>Amici dell’Arte APS</i> e il Comune di Vignola.</p></big><br><br>
 
  
 <p><strong><big><big>Gli autori</big></big></strong></p><br>
