--- a/Canto a Vignola.html
+++ b/Canto a Vignola.html
@@ -19,7 +19,6 @@
 <ul>
 <strong><li><a href="homepage.html">HOME</a></li>
 <li><a href="Chi siamo.html">CHI SIAMO?</a></li>
-<li><a href="Novità.html">NOVITÀ</a></li>
 <li  class="active"><a href="Celebri Vignolesi.html">CELEBRI VIGNOLESI</a></li>
 <li><a href="Anniversari.html">ANNIVERSARI</a></li>
 <li><a href="Contatti.html">CONTATTI</a></li></strong>
@@ -265,7 +264,7 @@ Di nova luce non ti torni muto.</i></big></p><br>
 ******* Fra i passati, basti accennare un Barozzi, un Cantelli, un Muratori, ed un Soli; fra i viventi, valga nominare il ch. prof. Antonio Alessandrini decoro dell’Università Bolognese e d’Italia tutta.</big></p><br><br><br>
 <p><big><strong><a href="Selmi.html">Profilo di Selmi</a></strong></big></p><br><br>	
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024, 2025 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
