--- a/Plessi2.html
+++ b/Plessi2.html
@@ -19,7 +19,6 @@
 <ul>
 <strong><li><a href="homepage.html">HOME</a></li>
 <li><a href="Chi siamo.html">CHI SIAMO?</a></li>
-<li><a href="Novità.html">NOVITÀ</a></li>
 <li  class="active"><a href="Celebri Vignolesi.html">CELEBRI VIGNOLESI</a></li>
 <li><a href="Anniversari.html">ANNIVERSARI</a></li>
 <li><a href="Contatti.html">CONTATTI</a></li></strong>
@@ -44,7 +43,7 @@ Del nostro personaggio, comunque, sappiamo alcune cose con certezza. Tra le più
 <center><img src="img/celebri vignolesi/Plessi Giuseppe Antonio/vaiolo.jpg" width="420" height="630"></center><br><br>	
 <p><strong><big><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024, 2025 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
