--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -67,18 +67,18 @@ All’interno dei due numeri, sono contenute anche le altrettante parti di cui s
 
 <p><big><strong>Marzo 2024</strong>: Collaborazione alla realizzazione dell’Annuario della cinquantatreesima edizione della <i>Festa dei Ciliegi in Fiore</i>.<br><br>
 
-All’interno del volume, è contenuto anche l’articolo che Sara Scaglioni, ha dedicato alla Sezione Vignolese dell’<i>AVIS Comunale di Vignola ODV</i>, nel settantesimo anniversario della sua costituzione.</big></p><br>
+All’interno del volume, è contenuto anche l’articolo che Sara Scaglioni ha dedicato alla Sezione Vignolese dell’<i>AVIS Comunale di Vignola ODV</i>, nel settantesimo anniversario della sua costituzione.</big></p><br>
 
 <p><big><strong>Ottobre 2023</strong>: Passeggiate storico-artistiche nel borgo di Vignola e nel cimitero di Vignola Capoluogo.</p></big>
 
-<p><big>In collaborazione con gli <i>Amici dell’Arte APS</i>, il Comune di Vignola e del Gruppo di documentazione vignolese <i>Mezaluna</i> - Mario Menabue.</p></big><br>
+<p><big>In collaborazione con gli <i>Amici dell’Arte APS</i>, il Comune di Vignola e del Gruppo di Documentazione Vignolese <i>Mezaluna</i> - Mario Menabue.</p></big><br>
 
 <p><big><strong>Settembre 2023</strong>: Collaborazione alla rivista mensile «Il Senso della Repubblica nel XXI secolo. Quaderni di Storia e Filosofia».<br><br>
 
 All’interno del numero, è contenuto anche l’articolo che Piero Venturelli ha dedicato alla figura e alle opere di Giacomo Barozzi, nonché alle Celebrazioni Barozziane, alla vigilia nel quattrocentocinquantesimo anniversario della morte del famoso personaggio.</big></p><br>
 
 
-<p><big><strong>Maggio 2023</strong>: Passeggiate storico-artistiche nel cimitero di Vignola capoluogo.</p></big>
+<p><big><strong>Maggio 2023</strong>: Passeggiate storico-artistiche nel cimitero di Vignola Capoluogo.</p></big>
 
 <p><big>In collaborazione con gli <i>Amici dell’Arte APS</i> e il Comune di Vignola.</big></p><br>
 
