--- a/giugno.html
+++ b/giugno.html
@@ -20,7 +20,6 @@
 <ul>
 <strong><li><a href="homepage.html">HOME</a></li>
 <li><a href="Chi siamo.html">CHI SIAMO?</a></li>
-<li><a href="Novità.html">NOVITÀ</a></li>
 <li><a href="Celebri Vignolesi.html">CELEBRI VIGNOLESI</a></li>
 <li class="active"><a href="Anniversari.html">ANNIVERSARI</a></li>
 <li><a href="Contatti.html">CONTATTI</a></li></strong>
@@ -144,7 +143,7 @@ Nelle immagini sottostanti, la casa natale di Pietro Antonio Bernardoni e la lap
 <p><big><strong><center>Vuoi saperne di più su Pietro Antonio Bernardoni?<br>Allora, visita il suo <a href="Bernardoni.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
 <p><strong><a href="Anniversari.html">Indice dei mesi</a></strong></center></p><br><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024, 2025 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail:<a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
