--- a/settembre.html
+++ b/settembre.html
@@ -20,7 +20,6 @@
 <ul>
 <strong><li><a href="homepage.html">HOME</a></li>
 <li><a href="Chi siamo.html">CHI SIAMO?</a></li>
-<li><a href="Novità.html">NOVITÀ</a></li>
 <li><a href="Celebri Vignolesi.html">CELEBRI VIGNOLESI</a></li>
 <li class="active"><a href="Anniversari.html">ANNIVERSARI</a></li>
 <li><a href="Contatti.html">CONTATTI</a></li></strong>
@@ -77,7 +76,7 @@ Dedicatosi con profitto e costanza agli studi storici ed eruditi, nonché a cons
 <p><strong><big><big><center>Vuoi saperne di più su Gian Francesco Soli Muratori?<br>Allora, visita il suo <a href="Soli3.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024, 2025 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
