--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -67,15 +67,15 @@ All’interno dei due numeri, sono contenute anche le altrettante parti di cui s
 
 <p><big><strong>Marzo 2024</strong>: Collaborazione alla realizzazione dell’Annuario della cinquantatreesima edizione della <i>Festa dei Ciliegi in Fiore</i>.<br><br>
 
-All’interno del volume, è contenuto anche l’articolo che Sara Scaglioni ha dedicato alla Sezione Vignolese dell’<i>AVIS Comunale di Vignola ODV</i>, nel settantesimo anniversario della sua costituzione.</big></p><br>
+All’interno del volume, è contenuto anche l’articolo che Sara Scaglioni ha dedicato alla Sezione Vignolese dell’<i>AVIS Comunale di Vignola ODV</i>, nel 70° anniversario della sua costituzione.</big></p><br>
 
 <p><big><strong>Ottobre 2023</strong>: Passeggiate storico-artistiche nel borgo di Vignola e nel cimitero di Vignola Capoluogo.</p></big>
 
-<p><big>In collaborazione con gli <i>Amici dell’Arte APS</i>, il Comune di Vignola e del Gruppo di Documentazione Vignolese <i>Mezaluna</i> - Mario Menabue.</p></big><br>
+<p><big>In collaborazione con gli <i>Amici dell’Arte APS</i>, il Comune di Vignola e del Gruppo di Documentazione Vignolese <i>Mezaluna</i> - <i>Mario Menabue</i>.</p></big><br>
 
 <p><big><strong>Settembre 2023</strong>: Collaborazione alla rivista mensile «Il Senso della Repubblica nel XXI secolo. Quaderni di Storia e Filosofia».<br><br>
 
-All’interno del numero, è contenuto anche l’articolo che Piero Venturelli ha dedicato alla figura e alle opere di Giacomo Barozzi, nonché alle Celebrazioni Barozziane, alla vigilia nel quattrocentocinquantesimo anniversario della morte del famoso personaggio.</big></p><br>
+All’interno del numero, è contenuto anche l’articolo che Piero Venturelli ha dedicato alla figura e alle opere di Giacomo Barozzi, nonché alle Celebrazioni Barozziane, alla vigilia nel 450° anniversario della morte del famoso personaggio.</big></p><br>
 
 
 <p><big><strong>Maggio 2023</strong>: Passeggiate storico-artistiche nel cimitero di Vignola Capoluogo.</p></big>
@@ -88,9 +88,26 @@ All’interno del numero, è contenuto anche l’articolo che Piero Venturelli h
 All’interno del numero, è contenuto anche l’articolo che Piero Venturelli ha dedicato ad Agostino Paradisi <i>il Giovane</i> ammiratore di Dante.</big></p><br>
 
 
-<p><big><strong>Periodico accompagnamento dei visitatori allo Studiolo di Lodovico Antonio Muratori</strong>.<br><br>
+<p><big><strong>Periodicamente</strong>: accompagnamento dei visitatori alla Casa Natale di Lodovico Antonio Muratori.<br><br>
 
 In collaborazione con gli <i>Amici dell’Arte APS</i> e il Comune di Vignola.</p></big><br><br>
+
+
+<p><strong><big><big>FOTOGRAFIE</big></big></strong></p><br>
+
+<p><big>Alcuni momenti delle iniziative pubbliche realizzate da <i>Celebri Vignolesi</i>.</big></p><br><br><br>
+<center><img src="img/FOTO VARIE/cimitero.jpg" width="750" height="530"></center>
+<p><big>In visita presso il cimitero di Vignola capoluogo; tomba di Amleto Degli Esposti raccontata da Piero Venturelli.</big></p><br><br>
+<center><img src="img/FOTO VARIE/cimiterosara.jpg" width="450" height="600"></center>
+<p><big>In visita presso il cimitero di Vignola capoluogo; tomba di Luigi Bondioli raccontata da Sara Scaglioni.</big></p><br><br>
+<center><img src="img/FOTO VARIE/muratoriesterno.jpg" width="750" height="540"></center>
+<p><big>In visita presso la Casa Natale di Muratori.</big></p><br><br>
+<center><img src="img/FOTO VARIE/muratoristudiolo.jpg" width="750" height="550"></center>
+<p><big>In visita presso lo Studiolo di Muratori.</big></p><br><br>
+<center><img src="img/FOTO VARIE/sarascaglionieluigiselmi.jpg" width="530" height="700"></center>
+<p><big>Sara Scaglioni e Luigi Selmi (discendente di un cugino di Francesco Selmi) in visita alla rocca di Vignola.</big></p><br><br>
+<center><img src="img/FOTO VARIE/visitapieve.jpg" width="750" height="580"></center>
+<p><big>Passeggiata storico-artistica tenuta durante la <i>Settimana dell’Alzheimer 2024</i> (19 settembre 2024).</big></p><br><br><br>
 
  
 <p><strong><big><big>Gli autori</big></big></strong></p><br>
