--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -108,6 +108,8 @@ In collaborazione con gli <i>Amici dell’Arte APS</i> e il Comune di Vignola.</
 <p><big>Sara Scaglioni e Luigi Selmi (discendente di un cugino di Francesco Selmi) in visita alla rocca di Vignola.</big></p><br><br>
 <center><img src="img/FOTO VARIE/visitapieve.jpg" width="750" height="580"></center>
 <p><big>Passeggiata storico-artistica tenuta durante la <i>Settimana dell’Alzheimer 2024</i> (19 settembre 2024).</big></p><br><br><br>
+<center><img src="img/FOTO VARIE/museocivico.jpg" width="850" height="440"></center>
+<p><big>Passeggiata storico-culturale lungo le vie della città.</big></p><br><br>
 
  
 <p><strong><big><big>Gli autori</big></big></strong></p><br>
