--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -90,26 +90,30 @@ All’interno del numero, è contenuto anche l’articolo che Piero Venturelli h
 
 <p><big><strong>Periodicamente</strong>: accompagnamento dei visitatori alla Casa Natale di Lodovico Antonio Muratori.<br><br>
 
-In collaborazione con gli <i>Amici dell’Arte APS</i> e il Comune di Vignola.</p></big><br><br>
+In collaborazione con gli <i>Amici dell’Arte APS</i> e il Comune di Vignola.</p></big><br>
+
+<p><big><strong>Occasionalmente</strong>: accompagnamento di visitatori di riguardo alla scoperta della storia di Vignola e delle bellezze del territorio.<br><br>
+
+In collaborazione con gli <i>Amici dell’Arte APS</i>.</p></big><br>	
 
 
 <p><strong><big><big>FOTOGRAFIE</big></big></strong></p><br>
 
 <p><big>Alcuni momenti delle iniziative pubbliche realizzate da <i>Celebri Vignolesi</i>.</big></p><br><br><br>
 <center><img src="img/FOTO VARIE/cimitero.jpg" width="750" height="530"></center>
-<p><big>In visita presso il cimitero di Vignola capoluogo; tomba di Amleto Degli Esposti raccontata da Piero Venturelli.</big></p><br><br>
+<p><big><center>In visita presso il cimitero di Vignola Capoluogo; tomba di Amleto Degli Esposti raccontata da Piero Venturelli.</center></big></p><br><br>
 <center><img src="img/FOTO VARIE/cimiterosara.jpg" width="450" height="600"></center>
-<p><big>In visita presso il cimitero di Vignola capoluogo; tomba di Luigi Bondioli raccontata da Sara Scaglioni.</big></p><br><br>
+<p><big><center>In visita presso il cimitero di Vignola Capoluogo; tomba di Luigi Bondioli raccontata da Sara Scaglioni.</center></big></p><br><br>
 <center><img src="img/FOTO VARIE/muratoriesterno.jpg" width="750" height="540"></center>
-<p><big>In visita presso la Casa Natale di Muratori.</big></p><br><br>
+<p><big><center>In visita presso la Casa Natale di Muratori.</center></big></p><br><br>
 <center><img src="img/FOTO VARIE/muratoristudiolo.jpg" width="750" height="550"></center>
-<p><big>In visita presso lo Studiolo di Muratori.</big></p><br><br>
+<p><big><center>In visita presso lo Studiolo di Muratori.</center></big></p><br><br>
 <center><img src="img/FOTO VARIE/sarascaglionieluigiselmi.jpg" width="530" height="700"></center>
-<p><big>Sara Scaglioni e Luigi Selmi (discendente di un cugino di Francesco Selmi) in visita alla rocca di Vignola.</big></p><br><br>
+<p><big><center>Sara Scaglioni e Luigi Selmi (discendente di un cugino di Francesco Selmi) in visita alla rocca di Vignola.</center></big></p><br><br>
 <center><img src="img/FOTO VARIE/visitapieve.jpg" width="750" height="580"></center>
-<p><big>Passeggiata storico-artistica tenuta durante la <i>Settimana dell’Alzheimer 2024</i> (19 settembre 2024).</big></p><br><br><br>
+<p><big><center>Passeggiata storico-artistica tenuta durante la <i>Settimana dell’Alzheimer 2024</i> (19 settembre 2024).</center></big></p><br><br><br>
 <center><img src="img/FOTO VARIE/museocivico.jpg" width="850" height="440"></center>
-<p><big>Passeggiata storico-culturale lungo le vie della città.</big></p><br><br>
+<p><big><center>Passeggiata storico-culturale lungo le vie della città.</center></big></p><br><br>
 
  
 <p><strong><big><big>Gli autori</big></big></strong></p><br>
