--- a/Chi siamo.html
+++ b/Chi siamo.html
@@ -94,26 +94,26 @@ In collaborazione con gli <i>Amici dell’Arte APS</i> e il Comune di Vignola.</
 
 <p><big><strong>Occasionalmente</strong>: accompagnamento di visitatori di riguardo alla scoperta della storia di Vignola e delle bellezze del territorio.<br><br>
 
-In collaborazione con gli <i>Amici dell’Arte APS</i>.</p></big><br>	
+In collaborazione con gli <i>Amici dell’Arte APS</i>.</p></big><br><br><br>	
 
 
 <p><strong><big><big>FOTOGRAFIE</big></big></strong></p><br>
 
 <p><big>Alcuni momenti delle iniziative pubbliche realizzate da <i>Celebri Vignolesi</i>.</big></p><br><br><br>
 <center><img src="img/FOTO VARIE/cimitero.jpg" width="750" height="530"></center>
-<p><big><center>In visita presso il cimitero di Vignola Capoluogo; tomba di Amleto Degli Esposti raccontata da Piero Venturelli.</center></big></p><br><br>
+<p><big><big><center>In visita presso il cimitero di Vignola Capoluogo; tomba di Amleto Degli Esposti raccontata da Piero Venturelli.</center></big></big></p><br><br>
 <center><img src="img/FOTO VARIE/cimiterosara.jpg" width="450" height="600"></center>
-<p><big><center>In visita presso il cimitero di Vignola Capoluogo; tomba di Luigi Bondioli raccontata da Sara Scaglioni.</center></big></p><br><br>
+<p><big><big><center>In visita presso il cimitero di Vignola Capoluogo; tomba di Luigi Bondioli raccontata da Sara Scaglioni.</center></big></big></p><br><br>
 <center><img src="img/FOTO VARIE/muratoriesterno.jpg" width="700" height="500"></center>
-<p><big><center>In visita presso la Casa Natale di Muratori.</center></big></p><br><br>
+<p><big><big><center>In visita presso la Casa Natale di Muratori.</center></big></big></p><br><br>
 <center><img src="img/FOTO VARIE/muratoristudiolo.jpg" width="700" height="500"></center>
-<p><big><center>In visita presso lo Studiolo di Muratori.</center></big></p><br><br>
+<p><big><big><center>In visita presso lo Studiolo di Muratori.</center></big></big></p><br><br>
 <center><img src="img/FOTO VARIE/sarascaglionieluigiselmi.jpg" width="530" height="700"></center>
-<p><big><center>Sara Scaglioni e Luigi Selmi (discendente di un cugino di Francesco Selmi) in visita alla rocca di Vignola.</center></big></p><br><br>
+<p><big><big><center>Sara Scaglioni e Luigi Selmi (discendente di un cugino di Francesco Selmi) in visita alla rocca di Vignola.</center></big></big></p><br><br>
 <center><img src="img/FOTO VARIE/visitapieve.jpg" width="750" height="580"></center>
-<p><big><center>Passeggiata storico-artistica tenuta durante la <i>Settimana dell’Alzheimer 2024</i> (19 settembre 2024).</center></big></p><br><br><br>
+<p><big><big><center>Passeggiata storico-artistica tenuta durante la <i>Settimana dell’Alzheimer 2024</i> (19 settembre 2024).</center></big></big></p><br><br><br>
 <center><img src="img/FOTO VARIE/museocivico.jpg" width="800" height="400"></center>
-<p><big><center>Passeggiata storico-culturale lungo le vie della città.</center></big></p><br><br>
+<p><big><big><center>Passeggiata storico-culturale lungo le vie della città.</center></big></big></p><br><br>
 
  
 <p><strong><big><big>Gli autori</big></big></strong></p><br>
