--- a/Pippo.html
+++ b/Pippo.html
@@ -58,36 +58,41 @@ Rientrato stabilmente in Italia, Simonini ha scelto di fissare la propria dimora
 
 <p><big><strong><a href="https://domenicosimonini.com/">Domenico Simonini</a></strong> (ultimo accesso, 16 ottobre 2022): sito dell’Artista.</big></p><br><br><br>
 
-<h5><big><big><big><big><strong><center>DOMENICO SIMONINI. UN INDIPENDENTE DEL NOSTRO TEMPO</center></strong></big></big></big></big></big></h5><br><br>
-<p><big><i>Celebri Vignolesi</i> pubblica un’intervista filmata di venti minuti a Domenico Simonini, nella quale egli affronta diversi temi, spaziando dalle memorie familiari alla sua formazione artistica, dal suo rapporto con Vignola e i Vignolesi al ruolo dell’artista nella società, dai suoi incontri a Milano alla nascita del sodalizio <i>Città e Campagna</i> tra pittori e scultori che hanno una concezione etica dell’arte, dal suo impegno per far conoscere gli altri artisti anche nell’ambito del <i>Salotto di L.A. Muratori</i> di Vignola alle sue prospettive per il futuro ecc. Questa intervista è stata girata due giorni fa nel laboratorio di Simonini ed è un’esclusiva di <i>Celebri Vignolesi</i>.</big><br>
-<p><big><strong><a href="Intervista.html">Domenico Simonini. Un indipendente del nostro tempo</a></strong></big></p><br><br><br>
+<h5><big><big><big><big><strong><center>FILMATI</center></strong></big></big></big></big></big></h5><br><br>
+<p><big>Si pubblicano qui due interviste filmate a Simonini. Entrambe durano all’incirca 20 minuti.<br><br>
+Nella prima intervista, il maestro vignolese si sofferma sulla sua ricerca artistica nell’arco dei primi quattro lustri di carriera, prendendo in esame non solo i caratteri della sua pittura realista, ma anche il realismo figurativo nella grande arte del passato, alcune linee di sviluppo dell’arte contemporanea e il concetto di libertà dell’artista.<br>
+Questo contributo fu girato a Vignola nel 1990 dalla rivista foggiana «Arte e Carte» (<strong><a href="http://www.arteecarte.it/cat/articolo_video.php?nn=147">http://www.arteecarte.it/cat/articolo_video.php?nn=147</a></strong>, ultimo accesso 11 febbraio 2025). Interventi per migliorare la qualità dell’audio sono stati eseguiti nel gennaio e febbraio 2025 da Sara Scaglioni, alla quale si deve anche l’intitolazione del filmato.<br><br>
+<strong><a href="Intervista.html">La ricerca artistica di Domenico Simonini fino al 1990</a></strong><br><br>
+Nella seconda intervista, il nostro personaggio affronta diversi temi, spaziando dalle memorie familiari alla sua formazione artistica, dal suo rapporto con Vignola e i Vignolesi al ruolo dell’artista nella società, dai suoi incontri a Milano alla nascita del sodalizio <i>Città e Campagna</i> tra pittori e scultori che hanno una concezione etica dell’arte, dal suo impegno per far conoscere gli altri artisti anche nell’ambito del <i>Salotto di L.A. Muratori</i> di Vignola alle sue prospettive per il futuro ecc.<br> 
+Questo contributo è stato girato il 13 ottobre 2022 nel laboratorio di Simonini da Sara Scaglioni, che si è occupata anche della postproduzione, ed è un’esclusiva di <i>Celebri Vignolesi</i>.<br>
+<p><strong><a href="Intervista.html">Domenico Simonini. Un indipendente del nostro tempo</a></strong></p><br><br><br>
 
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 
-<p><big><big><center> Ritratto fotografico della famiglia Simonini alla fine del 1953 o all’inizio del 1954:<br> Giacomo Simonini e Marta Magni con i piccoli Giuseppe (n. 1951) e Domenico.<br> L’autore dello scatto è il fratello del capofamiglia, il fotografo Giuseppe.  </center></big></big><br>
+<p><big><big><center> Ritratto fotografico della famiglia Simonini alla fine del 1953 o all’inizio del 1954:<br> Giacomo Simonini (1913-1995) e Marta Magni (1924-2004) con i piccoli<br> Giuseppe (n. 1951), al centro, e Domenico, a sinistra.<br> L’autore dello scatto è il fratello del capofamiglia, il fotografo Giuseppe (1901-1994).  </center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/famiglia.jpg" width="520" height="720"></p><br>
-<p><big><big><center>Simonini a Saint-Tropez (1969).  </center></big></big><br>
+<p><big><big><center>Simonini a Saint-Tropez (1969). Fonte: Archivio fotografico dell’Artista. </center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/saintropez.jpg" width="520" height="750"></p><br>
 <p><big><big><center> Simonini, <i>Donna seduta</i>, olio su tela, 1969 o 1970. Collezione privata dell’Artista.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/pippogiovane.jpg" width="500" height="650"></p><br>
-<p><big><big><center>Il gruppo musicale <i>Azienda Tranviaria</i> in concerto (1974). Simonini è il batterista.  </center></big></big><br>
+<p><big><big><center>Il gruppo musicale <i>Azienda Tranviaria</i> in concerto (1974). Simonini è il batterista.<br> Fonte: Archivio fotografico dell’Artista. </center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/band.jpg" width="850" height="600"></p><br>
-<p><big><big><center>Simonini, senza titolo, incisione all’acquaforte, 1980. Questo esemplare è custodito a Bagnacavallo (RA),<br> Museo Civico delle Cappuccine, Gabinetto delle Stampe.</center></big></big><br>
+<p><big><big><center>Simonini, senza titolo, incisione all’acquaforte, 1980. Questo esemplare è custodito a Bagnacavallo (RA),<br> Museo Civico delle Cappuccine, Gabinetto delle Stampe. Fonte: google.com</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/bagnacavallo.jpg" width="460" height="600"></p><br>
-<p><big><big><center>Simonini all’<i>Expo</i> di Bari (1983). Di fianco a lui, il suo olio su tela <i>Carnevale</i>, da poco eseguito (oggi in collezione privata).</center></big></big><br>
+<p><big><big><center>Simonini all’<i>Expo</i> di Bari (1983). Di fianco a lui, il suo olio su tela <i>Carnevale</i>,<br> da poco eseguito (oggi in collezione privata). Fonte: Archivio fotografico dell’Artista.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/expo.jpg" width="860" height="580"></p><br>
 <p><big><big><center>Simonini, <i>Composizione</i>, olio su tela, 1984. Collezione privata.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/incisione.jpg" width="500" height="570"></p><br>
 <p><big><big><center>Simonini, <i>Natura morta con rose</i>, olio su tela, 1990. Collezione privata.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/simonini.jpg" width="450" height="530"></p><br>
-<p><big><big><center>Simonini e Luciano Pavarotti nel 1990 al <i>Club Europa 92</i>, Modena, durante la personale dell’Artista.</center></big></big><br>
+<p><big><big><center>Simonini e Luciano Pavarotti (1935-2007) nel 1990 al <i>Club Europa 92</i>, Modena,<br> durante la personale del Vignolese. Fonte: Archivio fotografico di Simonini.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/pavarotto.jpg" width="870" height="630"></p><br>
-<p><big><big><center>L’Artista con Raffaele De Grada <i>junior</i> e Maria Luisa Simone all’inizio degli anni Novanta.<br> Fonte: Archivio fotografico di Domenico Simonini.</center></big></big><br>
+<p><big><big><center>L’Artista con Raffaele De Grada <i>junior</i> (1916-2010) e Maria Luisa Simone (n. 1938)<br> all’inizio degli anni Novanta. Fonte: Archivio fotografico di Simonini.</center></big></big><br>
 	<img src="img/celebri vignolesi/Pippo/degrada.jpg" width="950" height="640"></p><br>
 <p><big><big><center>Simonini, <i>Le Sélect, Boulevard Montparnasse</i>, olio su tela, 1993. Collezione privata.</center></big></big><br>
 	<img src="img/celebri vignolesi/Pippo/Le Sélect.jpg" width="970" height="690"></p><br>
-<p><big><big><center>Simonini nel suo studio parigino (Montparnasse). La fotografia è stata scattata nel 1994 o 1995. Fonte: Archivio dell’Artista.</center></big></big><br>
+<p><big><big><center>Simonini nel suo studio parigino (Montparnasse). La fotografia è stata<br> scattata nel 1994 o 1995. Fonte: Archivio dell’Artista.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/Pipposeduto.jpg" width="500" height="770"></p><br>
 <p><big><big><center>Simonini, <i>Le Dôme</i>, olio su tela, 2003. Collezione privata.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/le dome.jpg"></p><br>
@@ -105,17 +110,17 @@ Rientrato stabilmente in Italia, Simonini ha scelto di fissare la propria dimora
 <img src="img/celebri vignolesi/Pippo/odessa.jpg"></p><br>
 <p><big><big><center>Simonini, <i>Venezia</i>, olio su tela, 2016. Collezione privata.</center></big></big></p>
 <img src="img/celebri vignolesi/Pippo/venezia.jpg" width="500" height="650"></p><br>
-<p><big><big><center>Primo piano di Simonini (2019).</center></big></big><br>
+<p><big><big><center>Primo piano di Simonini (2019). Fonte: Archivio fotografico dell’Artista.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/pippopensoso.jpg" width="850" height="600"></p><br>
 <p><big><big><center>L’Artista nel suo studio di Vignola. Fotografia del 13 ottobre 2022.</center></big></big><br>
 <img src="img/celebri vignolesi/Pippo/intervista.JPG" width="850" height="630"></p><br>
-<p><big><big><center>Simonini, <i>Pescherie in Via Drapperie a Bologna</i>, olio su tela, 2022 (collezione privata).</center></big></big></p>
+<p><big><big><center>Simonini, <i>Pescherie in Via Drapperie a Bologna</i>, olio su tela, 2022. Collezione privata.</center></big></big></p>
 <img src="img/celebri vignolesi/Pippo/pescherie.jpg" width="540" height="650"></p><br>
 <p><big><big><center>L’Artista nel suo studio di Vignola mentre sta lavorando al quadro <i>Paris, bistrot rue Mouftard</i>.<br> Fotografia del 13 ottobre 2022.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/pippodipinge.JPG" width="850" height="660"></p><br>
-<p><big><center>Simonini, <i>Paris, bistrot rue Mouftard</i>, olio su tela, collezione privata (2022).</center></big><br>
-<img src="img/celebri vignolesi/Pippo/quadrofinito.jpg" width="540" height="650"></p><br><br><br>
-<p><big><center>Simonini in compagnia degli amici Giovanni Romani (alla sua destra) e Raffaele Montanari (alla sua sinistra).<br> Questa fotografia è stata scattata il 16 luglio 2023.</center></big></p><br>
+<p><big><center>Simonini, <i>Paris, bistrot rue Mouftard</i>, olio su tela, 2022. Collezione privata.</center></big><br>
+<img src="img/celebri vignolesi/Pippo/quadrofinito.jpg" width="540" height="650"></p><br>
+<p><big><center>Simonini in compagnia degli amici Giovanni Romani (alla sua destra) e Raffaele Montanari (alla sua sinistra).<br> Questa fotografia è stata scattata il 16 luglio 2023.</center></big></p>
 <img src="img/celebri vignolesi/Pippo/romani.jpg" width="430" height="590"></p><br><br><br>
 
 
