--- a/Intervista.html
+++ b/Intervista.html
@@ -28,9 +28,13 @@
 <section>
 <p><big><strong><a href="Pippo.html">Profilo di Simonini</a></strong></big></p><br><br><br>
 
-<h5><big><big><big><big><strong><center>DOMENICO SIMONINI. UN INDIPENDENTE DEL NOSTRO TEMPO</center></strong></big></big></big></big></big></h5><br>
+<h5><big><big><big><big><strong><center>La ricerca artistica di Domenico Simonini fino al 1990</center></strong></big></big></big></big></big></h5><br>
+<p><center><video width="470" height="300" controls>
+    <source src="video/arteecarte.mp4" type="video/mp4">
+</center></video></p><br><br><br>
 
-<p><big>Intervista del 13 ottobre 2022 presenta e realizzata da Sara Scaglioni - <i>Celebri Vignolesi</i></big></p><br><br>
+
+<h5><big><big><big><big><strong><center>DOMENICO SIMONINI. UN INDIPENDENTE DEL NOSTRO TEMPO</center></strong></big></big></big></big></big></h5><br>
 
 <p><big><big><center><strong>PARTE PRIMA: DOMENICO SIMONINI AL LAVORO</strong></center></big></big></p><br>
 <p><center><video width="470" height="300" controls>
