--- a/Pippo.html
+++ b/Pippo.html
@@ -70,53 +70,53 @@ Questo contributo è stato girato il 13 ottobre 2022 nel laboratorio di Simonini
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 
-<p><big><big><center> Ritratto fotografico della famiglia Simonini alla fine del 1953 o all’inizio del 1954:<br> Giacomo Simonini (1913-1995) e Marta Magni (1924-2004) con i piccoli<br> Giuseppe (n. 1951), al centro, e Domenico, a sinistra.<br> L’autore dello scatto è il fratello del capofamiglia, il fotografo Giuseppe (1901-1994).  </center></big></big><br>
+<p><big><center> Ritratto fotografico della famiglia Simonini alla fine del 1953 o all’inizio del 1954:<br> Giacomo Simonini (1913-1995) e Marta Magni (1924-2004) con i piccoli<br> Giuseppe (n. 1951), al centro, e Domenico, a sinistra.<br> L’autore dello scatto è il fratello del capofamiglia, il fotografo Giuseppe (1901-1994).  </center></big><br>
 <img src="img/celebri vignolesi/Pippo/famiglia.jpg" width="520" height="720"></p><br>
-<p><big><big><center>Simonini a Saint-Tropez (1969). Fonte: Archivio fotografico dell’Artista. </center></big></big><br>
+<p><big><center>Simonini a Saint-Tropez (1969). Fonte: Archivio fotografico dell’Artista.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/saintropez.jpg" width="520" height="750"></p><br>
-<p><big><big><center> Simonini, <i>Donna seduta</i>, olio su tela, 1969 o 1970. Collezione privata dell’Artista.</center></big></big><br>
+<p><big><center> Simonini, <i>Donna seduta</i>, olio su tela, 1969 o 1970. Collezione privata dell’Artista.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/pippogiovane.jpg" width="500" height="650"></p><br>
-<p><big><big><center>Il gruppo musicale <i>Azienda Tranviaria</i> in concerto (1974). Simonini è il batterista.<br> Fonte: Archivio fotografico dell’Artista. </center></big></big><br>
+<p><big><center>Il gruppo musicale <i>Azienda Tranviaria</i> in concerto (1974). Simonini è il batterista.<br> Fonte: Archivio fotografico dell’Artista.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/band.jpg" width="850" height="600"></p><br>
-<p><big><big><center>Simonini, senza titolo, incisione all’acquaforte, 1980. Questo esemplare è custodito a Bagnacavallo (RA),<br> Museo Civico delle Cappuccine, Gabinetto delle Stampe. Fonte: google.com</center></big></big><br>
+<p><big><center>Simonini, senza titolo, incisione all’acquaforte, 1980. Questo esemplare è custodito a Bagnacavallo (RA),<br> Museo Civico delle Cappuccine, Gabinetto delle Stampe. Fonte: google.com</center></big><br>
 <img src="img/celebri vignolesi/Pippo/bagnacavallo.jpg" width="460" height="600"></p><br>
-<p><big><big><center>Simonini all’<i>Expo</i> di Bari (1983). Di fianco a lui, il suo olio su tela <i>Carnevale</i>,<br> da poco eseguito (oggi in collezione privata). Fonte: Archivio fotografico dell’Artista.</center></big></big><br>
+<p><big><center>Simonini all’<i>Expo</i> di Bari (1983). Di fianco a lui, il suo olio su tela <i>Carnevale</i>,<br> da poco eseguito (oggi in collezione privata). Fonte: Archivio fotografico dell’Artista.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/expo.jpg" width="860" height="580"></p><br>
-<p><big><big><center>Simonini, <i>Composizione</i>, olio su tela, 1984. Collezione privata.</center></big></big><br>
+<p><big><center>Simonini, <i>Composizione</i>, olio su tela, 1984. Collezione privata.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/incisione.jpg" width="500" height="570"></p><br>
-<p><big><big><center>Simonini, <i>Natura morta con rose</i>, olio su tela, 1990. Collezione privata.</center></big></big><br>
+<p><big><center>Simonini, <i>Natura morta con rose</i>, olio su tela, 1990. Collezione privata.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/simonini.jpg" width="450" height="530"></p><br>
-<p><big><big><center>Simonini e Luciano Pavarotti (1935-2007) nel 1990 al <i>Club Europa 92</i>, Modena,<br> durante la personale del Vignolese. Fonte: Archivio fotografico di Simonini.</center></big></big><br>
+<p><big><center>Simonini e Luciano Pavarotti (1935-2007) nel 1990 al <i>Club Europa 92</i>, Modena,<br> durante la personale del Vignolese. Fonte: Archivio fotografico di Simonini.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/pavarotto.jpg" width="870" height="630"></p><br>
-<p><big><big><center>L’Artista con Raffaele De Grada <i>junior</i> (1916-2010) e Maria Luisa Simone (n. 1938)<br> all’inizio degli anni Novanta. Fonte: Archivio fotografico di Simonini.</center></big></big><br>
+<p><big><center>L’Artista con Raffaele De Grada <i>junior</i> (1916-2010) e Maria Luisa Simone (n. 1938)<br> all’inizio degli anni Novanta. Fonte: Archivio fotografico di Simonini.</center></big><br>
 	<img src="img/celebri vignolesi/Pippo/degrada.jpg" width="950" height="640"></p><br>
-<p><big><big><center>Simonini, <i>Le Sélect, Boulevard Montparnasse</i>, olio su tela, 1993. Collezione privata.</center></big></big><br>
+<p><big><center>Simonini, <i>Le Sélect, Boulevard Montparnasse</i>, olio su tela, 1993. Collezione privata.</center></big><br>
 	<img src="img/celebri vignolesi/Pippo/Le Sélect.jpg" width="970" height="690"></p><br>
-<p><big><big><center>Simonini nel suo studio parigino (Montparnasse). La fotografia è stata<br> scattata nel 1994 o 1995. Fonte: Archivio dell’Artista.</center></big></big><br>
+<p><big><center>Simonini nel suo studio parigino (Montparnasse). La fotografia è stata<br> scattata nel 1994 o 1995. Fonte: Archivio dell’Artista.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/Pipposeduto.jpg" width="500" height="770"></p><br>
-<p><big><big><center>Simonini, <i>Le Dôme</i>, olio su tela, 2003. Collezione privata.</center></big></big><br>
+<p><big><center>Simonini, <i>Le Dôme</i>, olio su tela, 2003. Collezione privata.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/le dome.jpg"></p><br>
-<p><big><big><center>Simonini, <i>Marché de Fleurs</i>, olio su tela, 2004. Collezione privata.</center></big></big><br>
+<p><big><center>Simonini, <i>Marché de Fleurs</i>, olio su tela, 2004. Collezione privata.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/Marché du fleurs.jpg"width="650" height="670"></p><br>
-<p><big><big><center>Simonini, <i>Il Panaro innevato</i>, olio su tela, 2005. Collezione privata.</center></big></big><br>
+<p><big><center>Simonini, <i>Il Panaro innevato</i>, olio su tela, 2005. Collezione privata.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/Panaro.jpg" width="500" height="680"></p><br>
-<p><big><big><center>Simonini, <i>Mercato San Geminiano, Modena</i>, olio su tela, 2006. Collezione privata.</center></big></big><br>
+<p><big><center>Simonini, <i>Mercato San Geminiano, Modena</i>, olio su tela, 2006. Collezione privata.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/mercatomodena.jpg" width="650" height="670"></p><br>
-<p><big><big><center>Simonini, <i>Lucci e fiori in tavola</i>, olio su tela, 2008. Collezione privata.</center></big></big></p>
+<p><big><center>Simonini, <i>Lucci e fiori in tavola</i>, olio su tela, 2008. Collezione privata.</center></big></p>
 <img src="img/celebri vignolesi/Pippo/Lucci e fiori in tavola.jpg" width="740" height="630"></p><br><p>
-<p><big><big><center>Simonini, <i>Les Deux Magots</i>, olio su tela, 2013. Collezione privata.</center></big></big></p>
+<p><big><center>Simonini, <i>Les Deux Magots</i>, olio su tela, 2013. Collezione privata.</center></big></p>
 <img src="img/celebri vignolesi/Pippo/duemagotti.jpg" width="580" height="660"></p><br><p>
-<p><big><big><center>Simonini, <i>Odessa, Montparnasse</i>, olio su tela, 2015. Collezione privata.</center></big></big></p>
+<p><big><center>Simonini, <i>Odessa, Montparnasse</i>, olio su tela, 2015. Collezione privata.</center></big></p>
 <img src="img/celebri vignolesi/Pippo/odessa.jpg"></p><br>
-<p><big><big><center>Simonini, <i>Venezia</i>, olio su tela, 2016. Collezione privata.</center></big></big></p>
+<p><big><center>Simonini, <i>Venezia</i>, olio su tela, 2016. Collezione privata.</center></big></p>
 <img src="img/celebri vignolesi/Pippo/venezia.jpg" width="500" height="650"></p><br>
-<p><big><big><center>Primo piano di Simonini (2019). Fonte: Archivio fotografico dell’Artista.</center></big></big><br>
+<p><big><center>Primo piano di Simonini (2019). Fonte: Archivio fotografico dell’Artista.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/pippopensoso.jpg" width="850" height="600"></p><br>
-<p><big><big><center>L’Artista nel suo studio di Vignola. Fotografia del 13 ottobre 2022.</center></big></big><br>
+<p><big><center>L’Artista nel suo studio di Vignola. Fotografia del 13 ottobre 2022.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/intervista.JPG" width="850" height="630"></p><br>
-<p><big><big><center>Simonini, <i>Pescherie in Via Drapperie a Bologna</i>, olio su tela, 2022. Collezione privata.</center></big></big></p>
+<p><big><center>Simonini, <i>Pescherie in Via Drapperie a Bologna</i>, olio su tela, 2022. Collezione privata.</center></big></p>
 <img src="img/celebri vignolesi/Pippo/pescherie.jpg" width="540" height="650"></p><br>
-<p><big><big><center>L’Artista nel suo studio di Vignola mentre sta lavorando al quadro <i>Paris, bistrot rue Mouftard</i>.<br> Fotografia del 13 ottobre 2022.</center></big><br>
+<p><big><center>L’Artista nel suo studio di Vignola mentre sta lavorando al quadro <i>Paris, bistrot rue Mouftard</i>.<br> Fotografia del 13 ottobre 2022.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/pippodipinge.JPG" width="850" height="660"></p><br>
 <p><big><center>Simonini, <i>Paris, bistrot rue Mouftard</i>, olio su tela, 2022. Collezione privata.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/quadrofinito.jpg" width="540" height="650"></p><br>
