--- a/Intervista.html
+++ b/Intervista.html
@@ -34,7 +34,7 @@
 </center></video></p><br><br><br>
 
 
-<h5><big><big><big><big><strong><center>DOMENICO SIMONINI. UN INDIPENDENTE DEL NOSTRO TEMPO</center></strong></big></big></big></big></big></h5><br>
+<h5><big><big><big><big><strong><center>Domenico Simonini. Un indipendente del nostro tempo</center></strong></big></big></big></big></big></h5><br>
 
 <p><big><big><center><strong>PARTE PRIMA: DOMENICO SIMONINI AL LAVORO</strong></center></big></big></p><br>
 <p><center><video width="470" height="300" controls>
