--- a/Pippo.html
+++ b/Pippo.html
@@ -111,26 +111,28 @@ Questo contributo è stato girato il 13 ottobre 2022 nel laboratorio di Simonini
 <p><big><center>Simonini, <i>Les Deux Magots</i>, olio su tela, 2013. Collezione privata.</center></big></p>
 <img src="img/celebri vignolesi/Pippo/duemagotti.jpg" width="580" height="660"></p><br><p>
 
-<p><big><center>Simonini nel 2014 all'interno del suo studio vignolese<br> con l'appena concluso olio su tela <i>Veduta di Castelvetro di Modena</i>,<br> opera che sarebbe poi stata da lì a poco accolta in una collezione privata.<br> Fotografia di Dario Donatini, appartenente al suo Archivio personale.</center></big></p>
-<img src="img/celebri vignolesi/Pippo/dario.jpg" width="700" height="530">
+<p><big><center>Simonini nel 2014 all’interno del suo studio vignolese<br> con l’appena concluso olio su tela <i>Veduta di Castelvetro di Modena</i>,<br> opera che sarebbe poi stata da lì a poco accolta in una collezione privata.<br> Fotografia di Dario Donatini, appartenente al suo Archivio personale.</center></big></p>
+<img src="img/celebri vignolesi/Pippo/dario.jpg" width="700" height="530"><br><br>
 
 <p><big><center>Simonini, <i>Odessa, Montparnasse</i>, olio su tela, 2015. Collezione privata.</center></big></p>
 <img src="img/celebri vignolesi/Pippo/odessa.jpg"></p><br>
 
 <p><big><center>Quattro scatti inerenti alla mostra personale di Simonini allestita nel 2015 all’interno della rocca di Montesegale.<br> La fonte della prima immagine è l’Archivio fotografico dell’Artista.<br> Saad Aldoseri è l’autore degli altri tre scatti, che appartengono al suo Archivio personale.</center></big></p>
 <img src="img/celebri vignolesi/Pippo/montesegale2.jpg" width="480" height="650"></p><br>
-<img src="img/celebri vignolesi/Pippo/montesegale3.jpg" width="850" height="550"></p><br>
-<img src="img/celebri vignolesi/Pippo/montesegale4.jpg" width="850" height="380"></p><br>
+<img src="img/celebri vignolesi/Pippo/montesegale3.JPG" width="850" height="550"></p><br>
+<img src="img/celebri vignolesi/Pippo/montesegale4.JPG" width="850" height="380"></p><br>
 <img src="img/celebri vignolesi/Pippo/montesegale5.jpg" width="670" height="600"></p><br>
 
 <p><big><center>Simonini, <i>Venezia</i>, olio su tela, 2016. Collezione privata.</center></big></p>
 <img src="img/celebri vignolesi/Pippo/venezia.jpg" width="500" height="650"></p><br>
 <p><big><center>Primo piano di Simonini (2019). Fonte: Archivio fotografico dell’Artista.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/pippopensoso.jpg" width="850" height="600"></p><br>
-<p><big><center>L’Artista nel suo studio di Vignola. Fotografia del 13 ottobre 2022.</center></big><br>
-<img src="img/celebri vignolesi/Pippo/intervista.JPG" width="850" height="630"></p><br>
+
 <p><big><center>Simonini, <i>Pescherie in Via Drapperie a Bologna</i>, olio su tela, 2022. Collezione privata.</center></big></p>
 <img src="img/celebri vignolesi/Pippo/pescherie.jpg" width="540" height="650"></p><br>
+<p><big><center>L’Artista nel suo studio di Vignola. Fotografia del 13 ottobre 2022.</center></big><br>
+<img src="img/celebri vignolesi/Pippo/intervista.JPG" width="850" height="630"></p><br>
+
 <p><big><center>L’Artista nel suo studio di Vignola mentre sta lavorando al quadro <i>Paris, bistrot rue Mouftard</i>.<br> Fotografia del 13 ottobre 2022.</center></big><br>
 <img src="img/celebri vignolesi/Pippo/pippodipinge.JPG" width="850" height="660"></p><br>
 <p><big><center>Simonini, <i>Paris, bistrot rue Mouftard</i>, olio su tela, 2022. Collezione privata.</center></big><br>
