--- a/Pippo.html
+++ b/Pippo.html
@@ -112,7 +112,7 @@ Questo contributo è stato girato il 13 ottobre 2022 nel laboratorio di Simonini
 <img src="img/celebri vignolesi/Pippo/duemagotti.jpg" width="580" height="660"></p><br><p>
 
 <p><big><center>Simonini nel 2014 all’interno del suo studio vignolese<br> con l’appena concluso olio su tela <i>Veduta di Castelvetro di Modena</i>,<br> opera che sarebbe poi stata da lì a poco accolta in una collezione privata.<br> Fotografia di Dario Donatini, appartenente al suo Archivio personale.</center></big></p>
-<img src="img/celebri vignolesi/Pippo/dario.jpg" width="700" height="530"><br><br>
+<img src="img/celebri vignolesi/Pippo/dario.jpg" width="700" height="530"><br><br><br>
 
 <p><big><center>Simonini, <i>Odessa, Montparnasse</i>, olio su tela, 2015. Collezione privata.</center></big></p>
 <img src="img/celebri vignolesi/Pippo/odessa.jpg"></p><br>
