--- a/Costanzini.html
+++ b/Costanzini.html
@@ -40,8 +40,12 @@
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><big><big><center>Fotografia che ritrae Costanzini nel suo studio; questo scatto risale al 1933.<br> Fonte: Giuseppe Leonardi, <i>L’Alpino</i>, in Giampaolo Grandi (a cura di), <i>36a festa dei ciliegi in fiore<br> (Vignola dal 2 aprile all’8 maggio 2005). Annuario</i> […] <i>2005</i>, pubblicato dal Centro<br> Studi di Vignola, Savignano s.P. (MO), Tipolitografia F.G., 2005, pp. 43-47: 44.</center></big></big></p><br>
 <img src="img/celebri vignolesi/Costanzini/costanzini.jpg" width="550" height="620"><br><br><br>
+
 <p><big><big><center>Fotografia aerea dello Stadio Littoriale di Bologna scattata nel 1929. Fonte: google.com</center></big></big></p><br>
-<img src="img/celebri vignolesi/Costanzini/stadio.jpg" width="800" height="480"><br><br><br><br><br>
+<img src="img/celebri vignolesi/Costanzini/stadio.jpg" width="800" height="480"><br><br><br>
+
+<p><big><big><center>Cartolina raffigurante l’Ippodromo Arcoveggio di Bologna negli anni Trenta. Fonte: wikipedia.com</center></big></big></p><br>
+<img src="img/celebri vignolesi/Costanzini/arcoveggio.png"><br><br><br><br><br>
 
 
 
